--- a/index.html
+++ b/index.html
@@ -105,13 +105,11 @@
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
                                 style="font-family: tedFont;">November 22nd, 2020</span>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
-                                style="font-family: tedFont;"> - 10.00 AM IST</span>
+                                style="font-family: tedFont;"> - 09.00 AM IST</span>
                             <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                                 <p style="font-family: tedFont;">TKM College of Engineering, Kollam</p>
                             </a>
-                            <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-                                <h3 id="counter" style="font-family: tedFont; font-size: xx-large;">00d 00h 00m 00s</h3>
-                            </a>
+                            
 
                             <div class="row mt-4 justify-content-center">
                                 <div class="col-xl-4 col-lg-4">
@@ -119,6 +117,9 @@
                                         Now</a>
                                 </div>
                             </div>
+                            <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+                                <h3 id="counter" style=" margin-top: 3%; font-family: tedFont; font-size: xx-large;">00d 00h 00m 00s</h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -158,12 +159,12 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About TED</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a nonprofit
                             devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
                             less). TED began in 1984 as a conference where Technology, Entertainment and Design
-                            converged, and today covers almost all topics â€” from science to business to global issues
-                            â€” and is covered in most of the languages in the world. TED stands for one mission and
+                            converged, and today covers almost all topics - from science to business to global issues -
+                            and is covered in most of the languages in the world. TED stands for one mission and
                             that is: Spread ideas.</p>
                     </div>
                 </div>
@@ -175,7 +176,7 @@
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a global
                             community, welcoming those people from every discipline and culture that passionately
                             believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED
-                            aims to build a clearinghouse of free knowledge from the world's most inspired thinkers â€”
+                            aims to build a clearinghouse of free knowledge from the world's most inspired thinkers
                             and through that, bring forth a community of curious souls to engage with ideas and each
                             other, both online and at TED and TEDx events around the world, all year long.</p>
                     </div>
@@ -184,12 +185,12 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">ABOUT TEDxTKMCE</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">At its premier edition in
-                            2018, with the theme of â€œAlchemyâ€, TEDxTKMCE brought 8 illustrious speakers from across
+                            2018, with the theme of "Alchemy", TEDxTKMCE brought 8 illustrious speakers from across
                             the world and from different stratas of society. Aiming to bust myths and unravel lustrous
                             possibilities.
-                            . Following in itâ€™s footsteps and unfazed by the greatest challenge our generation has
+                            . Following in its footsteps and unfazed by the greatest challenge our generation has
                             faced till date, This year, We bring TEDxTKMCE Virtual.
                             TEDx is a haven wherein thoughts are sown, ideas sprout and innovation thrives. Our mission
                             is to use this virtuous dais to reach inward and exonerate the power within and truly bring
@@ -213,9 +214,9 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-3 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -228,11 +229,30 @@
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img src="img/performer/1.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Mohanlal</h4>
+                                    <span>Actor</span>
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -245,11 +265,12 @@
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-3 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -262,6 +283,7 @@
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                     </div>
                                 </div>
                             </div>
@@ -584,7 +606,7 @@
     <script src="js/main.js"></script>
 
     <script>
-        var countDownDate = new Date("Nov 20, 2020 10:00:00").getTime();
+        var countDownDate = new Date("Nov 22, 2020 09:00:00").getTime();
 
         // Update the count down every 1 second
         var x = setInterval(function () {
